further cleanup, mainly renaming and Resources which were left open